--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
-
+url: https://github.com/IamRaviMaurya
+baseurl: ""
 # Site settings
 title: Bageshwar Dham Maharastra Seva Samiti
 email: bageshwardhammaharastrasamiti@gmail.com
