--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: ""
 # Site settings
 title: Bageshwar Dham Maharastra Seva Samiti
 email: bageshwardhammaharastrasamiti@gmail.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Dhirendra Krishna Shastri also known as Bageshwar Dham Sarkar, is an Indian self-styled godman. He is the peethadhishwar of Bageshwar Dham, a religious Hindu site in Madhya Pradesh, India."
 
 
 # Team names, titles and social links
